--- a/backend/flask/myapp/templates/create.html
+++ b/backend/flask/myapp/templates/create.html
@@ -13,12 +13,15 @@
     {% include 'nav.html' %}
  
     <h1>Create Product</h1>   
-    <form action="" method="post">
-      {{ form.csrf_token }}
-      {{ form.name.label }} {{ form.name(size=25) }}<br>
-      {{ form.shopping_cart.label }} {{ form.shopping_cart() }}<br>
-      <input type="submit" value="Create">
-    </form>
+    <div class="productForm">
+      <form action="" method="post">
+        {{ form.csrf_token }}
+        {{ form.name.label }} {{ form.name(size=25) }}<br>
+        {{ form.shopping_cart.label }} {{ form.shopping_cart() }}<br>
+        <input type="submit" value="Create">
+      </form>
+    </div>
+   
      
    </body>
  </html>
